--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ theme: jekyll-theme-chirpy
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
 # otherwise, the layout language will use the default value of 'en'.
-lang: ko
+lang: ko-KR
 
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
 timezone: Asia/Seoul
@@ -24,19 +24,19 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://seonb2n.github.io"
+url: 'https://seonb2n.github.io'
 
 github:
   username: seonb2n # change to your github username
-
-twitter:
-  username:  # change to your twitter username
+#
+#twitter:
+#  username: twitter_username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: seonb2n
-  email: 626ksb@gmail.com # change to your email address
+  name: your_full_name
+  email: example@domain.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
 #    - https://twitter.com/username # change to your twitter homepage
@@ -45,7 +45,7 @@ social:
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
 
-google_site_verification: # fill in to your verification string
+google_site_verification: 000 # fill in to your verification string
 
 # ↑ --------------------------
 # The end of `jekyll-seo-tag` settings
@@ -71,10 +71,10 @@ theme_mode: # [light|dark]
 # will be added to all image (site avatar & posts' images) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-#img_cdn: "https://avatars.githubusercontent.com/u/53749409?v=4"
+img_cdn: ''
 
 # the avatar on sidebar, support local or CORS resources
-avatar: "/assets/img/seonb2n_icon.jpg"
+avatar: '/assets/img/seonb2n_icon.jpg'
 
 # boolean type, the global switch for TOC in posts.
 toc: true
