--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,9 @@ theme: jekyll-theme-chirpy
 # otherwise, the layout language will use the default value of 'en'.
 lang: ko-KR
 
+include:
+  - _javascript
+
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
 timezone: Asia/Seoul
 
