--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ social:
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
 
-google_site_verification: 000 # fill in to your verification string
+google_site_verification: ojqninuY_IDFL6AS7uzUZMPJ-ZNY985xvwJhI3gT3Bs
 
 # ↑ --------------------------
 # The end of `jekyll-seo-tag` settings
